[tool.poetry]
name = "google_api_clients"
version = "0.1.0"
description = ""
authors = ["gili-Katagiri"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
google-api-python-client = "^1.12.8"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
